--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2"
@@ -22,7 +22,7 @@
   },
   "eslintConfig": {
     "extends": [
-        "./node_modules/semistandard/eslintrc.json"
+      "./node_modules/semistandard/eslintrc.json"
     ]
-}
+  }
 }
